Fix validation error on login form misalignment

--- a/duelsys/TournamentManager/WebApp/wwwroot/css/site.css
+++ b/duelsys/TournamentManager/WebApp/wwwroot/css/site.css
@@ -29,10 +29,14 @@ body {
     background-color: sandybrown;
 }
 
+.validation-summary-valid > ul,
 .validation-summary-errors > ul {
     list-style: none;
+    padding-left: 0;
+}
+
+form > span {
     color: red;
-    text-align: center;
 }
 
 .field-validation-error{
